// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI pretty logger force-color 1`] = `
Array [
  Array [
    "2009-02-13T23:31:30.000Z ERROR   hallo { err:
   { message: 'hallo',
     name: 'Error',
     stack:
      'Error: hallo\\\\n    at Object.<anonymous> (<rootDir>/__tests__/cli.test.ts:30:18)' } }

",
  ],
]
`;

exports[`CLI pretty logger no-color 1`] = `
Array [
  Array [
    "2009-02-13T23:31:30.000Z ERROR   hallo { err:
   { message: 'hallo',
     name: 'Error',
     stack:
      'Error: hallo\\\\n    at Object.<anonymous> (<rootDir>/__tests__/cli.test.ts:15:18)\\\\n    at processTicksAndRejections (node:internal/process/task_queues:96:5)' } }

",
  ],
]
`;
